name:                monad-log
version:             0.2
synopsis:            A simple and fast logging monad
description:         
    This package provide a mtl style `MonadLog` class and a concrete monad transformer `LogT`, the main difference between this package and monad-logger are:
    .
    * Base monad has to be an instance of `MonadIO`.
    .
    * Parametrized logging environment for extensibility.
    .
    * Basic logging environment type(`Label`,`Loc`,`NameSpace`,`ThreadId`) are included, and you can easily make your own.
    .
    * JSON logging built-in.
    .
    * default to fast-logger backend, with good stdout and file support.
    .
    If you are an application author, you can use `LogT` transformer, it's just a specialized reader monad to inject `Logger env`.
    .
    If you are a library author, you should do following two things:
    .
    * make your monad stack an instance of 'MonadLog', usually you can do this by embedding `Logger env` into your monad's reader part.
    .
    * provide a default formatter, and API to run with customized formatter.


license:             MIT
license-file:        LICENSE
author:              winterland1989
maintainer:          winterland1989@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md README.md
cabal-version:       >=1.10
source-repository head
  type:                 git
  location:             https://github.com/winterland1989/monad-log

library
  ghc-options:          -Wall
  exposed-modules:      Control.Monad.Log.Base

  -- other-modules:       
  -- other-extensions:    
  build-depends:        base >=4.6 && <5
                    ,   mtl
                    ,   transformers-base
                    ,   data-has
                    ,   fast-logger >=2.4.5 && <2.5
                    ,   text
                    ,   text-show
                    ,   transformers >=0.2
                    ,   aeson        >= 0.4 && <0.12
                    ,   unix-time    >=0.2.2
                    ,   template-haskell


  -- hs-source-dirs:      
  default-language:    Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: benchmark
  default-language:    Haskell2010
  build-depends:        base
                    ,   bytestring
                    ,   criterion >= 1.0.2.0
                    ,   time
                    ,   thyme
                    ,   old-locale
                    ,   clock
